# gooroom-initial-setup

./: Makefile.am  README  autogen.sh  configure.ac
data/: 50_gooroom-initial-setup.rules  90_gooroom-initial-setup.conf  Makefile.am  gooroom-initial-setup-proxy
data/applications/: Makefile.am  gooroom-initial-setup.desktop.in.in
data/images/: Makefile.am
data/policy/: Makefile.am  kr.gooroom.InitialSetup.policy.in.in
data/sessions/: Makefile.am  gooroom-initial-setup.session
data/theme/: theme.css
data/xsessions/: Makefile.am  gooroom-initial-setup.desktop.in.in
debian/: changelog  control  copyright  gooroom-initial-setup.pkla  install  postinst  postrm  rules
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  gis-assistant.c  gis-assistant.h  gis-assistant.ui  gis-keyring.c  gis-keyring.h  gis-main.c  gis-message-dialog.c  gis-message-dialog.h  gis-message-dialog.ui  gis-page-manager.c  gis-page-manager.h  gis-page.c  gis-page.h  gresource.xml
src/pages/: Makefile.am
src/pages/account/: Makefile.am  account.gresource.xml  gis-account-page.c  gis-account-page.h  gis-account-page.ui  pw-utils.c  pw-utils.h  um-utils.c  um-utils.h
src/pages/eulas/: Makefile.am  eulas.gresource.xml  gis-eulas-page.c  gis-eulas-page.h  gis-eulas-page.ui  user_agreements_en.txt  user_agreements_ko.txt  utils.c  utils.h
src/pages/goa/: Makefile.am  gis-goa-page.c  gis-goa-page.h  gis-goa-page.ui  goa.gresource.xml
src/pages/language/: Makefile.am  cc-common-language.c  cc-common-language.h  cc-language-chooser.c  cc-language-chooser.h  cc-language-chooser.ui  gis-language-page.c  gis-language-page.h  gis-language-page.ui  language.gresource.xml
src/pages/network/: Makefile.am  gis-connection-editor-window.c  gis-connection-editor-window.h  gis-network-page.c  gis-network-page.h  gis-network-page.ui  network-dialogs.c  network-dialogs.h  network.gresource.xml
src/pages/summary/: Makefile.am  gis-adduser-helper.c  gis-copy-worker.c  gis-delete-lightdm-config-helper  gis-summary-page.c  gis-summary-page.h  gis-summary-page.ui  run-passwd.c  run-passwd.h  run-su.c  run-su.h  splash-window.c  splash-window.h  splash-window.ui  summary.gresource.xml
